- Refactor: Statute Type API cleanup
- Refactor: Ensure Statute Type code is required
- Refactor: Add creator method for Statute Type

32.9.6 (06-10-2021)
- Fix: Changed degree designation (SchoolLevelType.DOCTORATE_DEGREE SchoolLevelType.MASTER_DEGREE) #UL-REIT-2403

32.9.5 (06-10-2021)
- Improvement: Student group with argument to check enrolments

32.9.4 (30-09-2021)
- Improvement: Add presentation name to AcademicPeriod
- Refactor: Add RegistrationProtocol creator method
- Refactor: Add ProgramConclusion finder method

32.9.3 (20-09-2021)
- Improvement: Active students group with argument to check enrolments
- Refactor: Add IdDocumentTypeObject creator and finder methods

32.9.2 (16-09-2021)
- Refactor: Add method to update execution course name

32.9.1 (15-09-2021)
- Refactor: Rename slot to mark available school classes for enrolment

32.9.0 (13-09-2021)
- Improvement: Mark available school classes for automatic enrolment

32.8.13 (06-09-2021)
- Bug fix: OrRule should evaluate to true on prefilter level

32.8.12 (26-08-2021)
- Fix: Changed degree designation (SchoolLevelType.DEGREE) #UL-REIT-2403

32.8.11 (23-08-2021)
- Improvement: Only attempt shift enrolment in the first suitable capacity for provided registration

32.8.10 (29-07-2021)
- Bug Fix: Fix NPE due to inexsistent previous party contact

32.8.9 (26-07-2021)
- Improvement: When execution course has multiple competences, the resulted code should be sorted 
- Bug fix: Fixed NPE checking if rule applies to context
- Bug fix: Fixed wrong english translation for annuled enrolment state
- Bug fix: Allow empty marks

32.8.8 (24-06-2021)
- Refactor: Change Photograph delete to be able to delete any photo

32.8.7 (17-05-2021)
- Improvement: Added method to check if user is member of profile

32.8.6 (19-04-2021)
- Improvement: Added edit method to ExtraCurricularActivity 

32.8.5 (16-04-2021)
- Refactor: Country deprecated methods cleanup
- Improvement: fixing labels

32.8.4 (14-04-2021)